@@ -2,8 +2,8 @@
 -e .
 
 marshmallow-sqlalchemy  >= 0.8.0
-marshmallow-peewee      >= 1.0.4
-peewee                  == 2.10.2
+marshmallow-peewee      >= 2.0.0
+peewee                  >= 3.7.1
 mongomock==3.8.0
 pymongo==3.4.0
 
